--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                 </li>
                                 <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/lognormal_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      LogNormal
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/population_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Population
@@ -138,6 +145,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                 <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Fireballs
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/lognormal_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    LogNormal
                   </button>
                 </a>
                                 <a href="https://mshsu.github.io/probasets/population_demo.html">
