--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                 </li>
                                 <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/finance_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Finance
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Fireballs
@@ -107,6 +114,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   <a href="https://mshsu.github.io/probasets/population_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Population
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/ppp_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      PPP Loans
                     </button>
                   </a>
                 </li>
@@ -142,6 +156,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                     Earthquakes
                   </button>
                 </a>
+                                <a href="https://mshsu.github.io/probasets/finance_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Finance
+                  </button>
+                </a>
                                 <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Fireballs
@@ -155,6 +174,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                 <a href="https://mshsu.github.io/probasets/population_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Population
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/ppp_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    PPP Loans
                   </button>
                 </a>
                               </div>
