--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div class="col-6 mt-3 text-center d-none d-sm-block">
               <p>Applying probability distributions to real life
               data.</p>
+              <p><em>Made under the guidance of Dr. Kevin Ross. Not a
+              rigorous analysis (ie. generally no chi-square tests for
+              goodness of fit).</em></p>
             </div>
             <div class="col-11 mt-3 text-center d-block d-sm-none">
               <p>Applying probability distributions to real life
               data.</p>
+              <p><em>Made under the guidance of Dr. Kevin Ross. Not a
+              rigorous analysis (ie. generally no chi-square tests for
+              goodness of fit).</em></p>
             </div>
           </div>
 
@@ -90,6 +96,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                 </li>
                                 <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/finance_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Finance
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Fireballs
@@ -107,6 +120,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   <a href="https://mshsu.github.io/probasets/population_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Population
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/ppp_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      PPP Loans
                     </button>
                   </a>
                 </li>
@@ -142,6 +162,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                     Earthquakes
                   </button>
                 </a>
+                                <a href="https://mshsu.github.io/probasets/finance_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Finance
+                  </button>
+                </a>
                                 <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Fireballs
@@ -155,6 +180,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                 <a href="https://mshsu.github.io/probasets/population_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Population
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/ppp_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    PPP Loans
                   </button>
                 </a>
                               </div>
