--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                 </li>
                                 <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/fish_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Fish
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/lognormal_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       LogNormal
@@ -170,6 +177,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                 <a href="https://mshsu.github.io/probasets/fireballs_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Fireballs
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/fish_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Fish
                   </button>
                 </a>
                                 <a href="https://mshsu.github.io/probasets/lognormal_demo.html">
