Updated homepage, added files

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <p>Applying probability distributions to real life
               data.</p>
               <p><em>Made under the guidance of Dr. Kevin Ross. Not a
-              rigorous analysis (ie. generally no chi-square tests for
-              goodness of fit).</em></p>
+              rigorous analysis (ie. generally no tests for goodness of
+              fit).</em></p>
             </div>
             <div class="col-11 mt-3 text-center d-block d-sm-none">
               <p>Applying probability distributions to real life
               data.</p>
               <p><em>Made under the guidance of Dr. Kevin Ross. Not a
-              rigorous analysis (ie. generally no chi-square tests for
-              goodness of fit).</em></p>
+              rigorous analysis (ie. generally no tests for goodness of
+              fit).</em></p>
             </div>
           </div>
 
@@ -60,6 +60,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
           <div class="row justify-content-center align-items-center">
             <div class="col-8 text-center d-none d-sm-block">
               <ul class="list-inline">
+                                <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/actuarial_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Actuarial
+                    </button>
+                  </a>
+                </li>
                                 <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/bitcoin_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
@@ -124,6 +131,20 @@ document.addEventListener('DOMContentLoaded', function(e) {
                   </a>
                 </li>
                                 <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/olympics_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Olympics
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
+                  <a href="https://mshsu.github.io/probasets/olympic_allaround_demo.html">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Olympics (Men’s All-Around)
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
                   <a href="https://mshsu.github.io/probasets/population_demo.html">
                     <button type="button" class="btn btn-outline-dark mb-2">
                       Population
@@ -144,6 +165,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
           <div class="row justify-content-center align-items-center">
             <div class="col-8 m-1 text-center d-block d-sm-none">
               <div class="list-group">
+                                <a href="https://mshsu.github.io/probasets/actuarial_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Actuarial
+                  </button>
+                </a>
                                 <a href="https://mshsu.github.io/probasets/bitcoin_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Bitcoin
@@ -187,6 +213,16 @@ document.addEventListener('DOMContentLoaded', function(e) {
                                 <a href="https://mshsu.github.io/probasets/lognormal_demo.html">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     LogNormal
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/olympics_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Olympics
+                  </button>
+                </a>
+                                <a href="https://mshsu.github.io/probasets/olympic_allaround_demo.html">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Olympics (Men’s All-Around)
                   </button>
                 </a>
                                 <a href="https://mshsu.github.io/probasets/population_demo.html">
